Workaround for fleet manager star & ace not shown issue
* It seems something changed on new chromium versions,
  jq.show() cannot add `display:block` to the elements hidden by CSS

--- a/src/pages/strategy/tabs/fleet/fleet.css
+++ b/src/pages/strategy/tabs/fleet/fleet.css
@@ -257,14 +257,12 @@
 	padding-right:2px;
 	text-align:right;
 	color:#45a9a5;
-	display:none;
 }
 .tab_fleet .fleet_ship .gear_ace {
 	float:right;
 	width:30px;
 	position:absolute;
 	right:0px;
-	display:none;
 }
 .tab_fleet .fleet_ship .gear_ace img {
 	width:20px;
